rework to use the new Span Formatting/Parsing APIs

--- a/src/Microsoft.AspNetCore.Sockets.Common/Microsoft.AspNetCore.Sockets.Common.csproj
+++ b/src/Microsoft.AspNetCore.Sockets.Common/Microsoft.AspNetCore.Sockets.Common.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.IO.Pipelines" Version="0.1.0-*" />
+    <PackageReference Include="System.Text.Primitives" Version="0.1.0-*" />
     <PackageReference Include="System.Threading.Tasks.Channels" Version="0.1.0-*" />
   </ItemGroup>
 
